--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+        main {
+            width: 150px;
+            height: 150px;
+            background: #000000;
+        }
+
+        .hello-accio p {
+            color: #ffffff;
+            margin-left: 32px;
+            padding: 10px;
+        }
