--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
             background: #000000;
         }
 
-        .hello-accio p {
+        .hello-accio {
             color: #ffffff;
             margin-left: 32px;
             padding: 10px;
